--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,10 @@
 
         <!-- DB (MySQL 예시) -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.33</version> <!-- 최신 안정 버전으로 넣기 -->
+		    <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
