--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
   
     <!-- 여기서부터 dependencies 시작 -->
     <dependencies>
+    
+    	<!-- jakarta.persistence -->
+	    <dependency>
+	    	<groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+    
         <!-- 웹 (내장 톰캣 + Spring MVC) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
