--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 	    	<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
     
+    	<!-- Spring security용 -->
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+    
         <!-- 웹 (내장 톰캣 + Spring MVC) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
