--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
 		    <artifactId>spring-security-taglibs</artifactId>
 		    <version>6.2.0</version> <!-- 사용중인 Spring Security 버전에 맞춰 변경 -->
 		</dependency>
+		
+		<!-- LomBok 라이브러리 의존성 추가 -->
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.34</version>
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
 
     <build>
