--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<!-- 메일전송 의존성 추가 -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
